--- a/hotel_system/hotel_stats/templates/manage_reservations.html
+++ b/hotel_system/hotel_stats/templates/manage_reservations.html
@@ -117,6 +117,13 @@
                     <label><input type="radio" name="meal" value="Other" id="otherMeal"> Other</label>
                 </div>
 
+                <label for="modifyStaysInWeek">Stays in Week Nights</label>
+                <input type="number" id="modifyStaysInWeek" name="stays_in_week_nights" class="p-week-nights" property="schema:numberOfNights">
+
+                <label for="modifyStaysInWeekend">Stays in Weekend Nights</label>
+                <input type="number" id="modifyStaysInWeekend" name="stays_in_weekend_nights" class="p-weekend-nights" property="schema:duration">
+
+
                 <button type="submit" class="manage-link">Modify Reservation</button>
             </div>
         </form>
